# iniad-cs2-exercise

./: .eslintrc  .prettierrc  .stylelintrc  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: check.yml
app01/: views.py
config/: settings.py  urls.py
forecast/: views.py
src/iniad_cs2_exercise/: __init__.py
templates/forecast/: index.html
