[project]
authors = [
  {name = "mst-mkt", email = "s1f102303057@iniad.org"},
]
dependencies = [
  "django>=4.2.8",
]
description = "Computer-Science-II Exercise at INIAD with Django"
name = "iniad-cs2-exercise"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "django-stubs>=4.2.6",
  "ruff>=0.1.7",
  "mypy>=1.7.1",
  "djlint>=1.34.0",
]
managed = true

[tool.rye.scripts]
"dev" = {cmd = "python manage.py runserver"}
"format" = {chain = ["format:template", "format:css", "format:js", "format:py"]}
"format:css" = {cmd = "pnpm run format:css"}
"format:js" = {cmd = "pnpm run format:js"}
"format:py" = {cmd = "ruff check --fix ./app01 ./forecast --output-format=github"}
"format:template" = {cmd = "djlint --reformat ./templates/"}
"lint" = {chain = ["lint:template", "lint:css", "lint:js", "lint:py"]}
"lint:css" = {cmd = "pnpm run lint:css"}
"lint:js" = {cmd = "pnpm run lint:js"}
"lint:py" = {cmd = "ruff check ./app01 ./forecast --output-format=github"}
"lint:template" = {cmd = "djlint ./templates/"}
"migrate" = {cmd = "python manage.py migrate"}
"migration" = {cmd = "python manage.py makemigrations"}
"typecheck" = {cmd = "mypy ./"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
  "__init__.py",
  "migrations",
]
fixable = ["ALL"]
ignore = ["F401", "F841", "S311", "D"]
indent-width = 4
line-length = 100
select = ["ALL"]
target-version = "py312"
unfixable = ["F401", "F841"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.djlint]
ignore = "H006,H030,H031"
indent = 4
max_line_length = 100
profile = "django"
